Changement truc List.of